# pacopanda-drawing-stats

./: .dockerignore  .editorconfig  .env.node  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .vercelignore  CHANGELOG.md  LICENSE  LICENSE_CONTENT  Makefile  NOTICE  README.md  clean.js  docker-compose.yml  docs  mypy.ini  package-lock.json  package.json  paco.py  pseudocode  pyproject.toml  redis-stack.yml  reports  requirements.txt  tailwind.config.ts  testing.py  tsconfig.json  turbo.json  vercel.json
.github/: FUNDING.yml  dependabot.yml
.husky/: pre-commit
api/: package.json  server.ts
app/: .env.example  .env.local.example  .eslintrc.json  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  README.md  app.vue  cypress.config.ts  declarations.d.ts  next.config.js  nuxt.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/: .gitignore
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin/src-tauri/src/: main.rs
client/: .env.example  Dockerfile  next.config.js  nuxt.config.ts  package.json  svelte.config.js  tailwind.config.ts
data/: paco-drawing-data.ipynb  paco-ds-merge-data.py  paco-ds-species-2021.py  paco-ds-types.py
docs/: readme_es.md
paco_utils/: base.py  constants.py  exceptions.py  logger.py  parsers.py
parinton/: constants.py  exceptions.py  logger.py  parsers.py
puppeteer/: furaffinity.ts  index.ts  package.json  tsconfig.json
python/: .gitignore  Dockerfile  README.md  api-implmentation.apib  (+17 more)
(+356 files in other folders)
