[tool.poetry]
name = "parinton"
version = "0.1.0"
description = "Local scraper and parser library for collecting public drawing data from Paco Panda"
authors = ["Kerby Keith Aquino <skepfoosky15@gmail.com>"]
readme = "README.md"
packages = [{include = "parinton"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
bs4 = "^0.0.1"
requests = "^2.28.2"
fake-useragent = "^1.1.3"
redis = "^4.5.4"
mypy = "^1.2.0"
colorama = "0.4.6"
types-requests = "^2.28.11.17"
types-beautifulsoup4 = "^4.12.0.3"
pydantic = "^1.10.7"
nextcord = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
